--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,6 +10,7 @@ Imports: xtable
 License: LICENSE
 LazyData: true
 RoxygenNote: 7.3.2
+Roxygen: list(markdown = TRUE)
 Collate: 
     'check_norm.R'
     'dpsl.R'
